--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <p>Create your design to catch attention and make your site outstanding</p>
             </div>
             <div class="col-sm-8">
-                <P class="font-italic">try me and you'll be happy you did <a class="active" href="#"><i class="fa fa-home"></i></a></P>
+                <P class="font-italic">try me and you'll be happy you did <a class="active" href="#"><i class="fa fa-home fa-2x"></i></a></P>
             </div>
 
         </div>
@@ -111,7 +111,33 @@
         </div>
     </div>
     <footer>
-
+        <div class="site-footer">
+            <div class="site-footer-body">
+                <div class="">
+                    <ul class="list-unstyled">
+                        <li class="social-nav__item"><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
+                        <li class="social-nav__item"><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
+                        <li class="social-nav__item"><a href="#"><i class="fa fa-google fa-2x"></i></a></li>
+                    </ul>
+                </div>
+                <div class="">
+                    <ul class="list-unstyled">
+                        <li class="site-footer__item site-footer__item--inline">
+                            <a href="https://www..com/help/articles/terms-and-conditions" class="site-footer__link" target="_blank">Terms &amp; Conditions</a>
+                        </li>
+                        <li class="site-footer__item site-footer__item--inline">
+                            <a href="https://www../help/articles/privacy-and-cookies-notice" class="site-footer__link" target="_blank">Privacy &amp; Cookies Notice</a>
+                        </li>
+                        <li class="site-footer__item site-footer__item--inline">
+                            <a href="http://accessibility..com/" class="site-footer__link" target="_blank">Accessibility Information</a>
+                        </li>
+                        <li class="site-footer__item site-footer__item--inline">
+                            <a href="http://www..com/contact-us" class="site-footer__link">Contact Me</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
