--- a/index.html
+++ b/index.html
@@ -63,16 +63,17 @@
             <div class="col">
                 <p>please feel free to contact us through the form below</p>
                 <form class="form-control" action="get-in-touch">
-                    <label><input type="radio"name="personality"></label>
+                    <label><input type=""name="personality"></label>
                 </form>
                 <button class="btn btn--block btn-info">submit<i class="fa fa-paper-plane"></i></button>
             </div>
             <div class="col">
-                <span><p>Around the web</p></span>
+                <p>Around the web</p>
                 <input type="text" class="form-control">
                 <label for="email">email</label>
                 <input type="text" class="form-control">
                 <label for="message">message</label>
+                 <button class="btn btn--block btn-info">submit<i class="fa fa-paper-plane"></i></button>
                 <a class="btn btn-danger" href="#">
                     <i class="fa fa-trash-o fa-lg"></i> Delete</a>
             </div>
@@ -112,15 +113,15 @@
     </div>
     <footer>
         <div class="site-footer">
-            <div class="site-footer-body">
-                <div class="">
+            <div class="row">
+                <div class="col-sm-6">
                     <ul class="list-unstyled">
                         <li class="social-nav__item"><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
                         <li class="social-nav__item"><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
                         <li class="social-nav__item"><a href="#"><i class="fa fa-google fa-2x"></i></a></li>
                     </ul>
                 </div>
-                <div class="">
+                <div class="col-sm-6">
                     <ul class="list-unstyled">
                         <li class="site-footer__item site-footer__item--inline">
                             <a href="https://www..com/help/articles/terms-and-conditions" class="site-footer__link" target="_blank">Terms &amp; Conditions</a>
