new page restructure

--- a/new.html
+++ b/new.html
@@ -28,13 +28,53 @@
 
                 <a class="navbar-brand" href="http://"><img src="https://image.jpg" alt="Cubic-Design"></a>
             </div>
-            <ul class="navbar-right">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+            
 
         </nav>
-    
+        <div class="container">
+        <div class='row'>
+        <div class="col">
+        <h1>stand up against attacks on cultural heritage...<h1>
+        </div>
+        </div>
+        <div class="row">
+        <div class="col">
+        <h1>...and celebrate the objects and places that matter to you.</h1>
+        </div>
+        </div>
+        <div class="row">
+        <div class="col-xs-4"></div>
+        <div class="col-xs-4">
+        <p>join the conversation !</p>
+        </div>
+        <div class="col-xs-4"></div>
+        </div>
+        <div class="row">
+        <div class="col-xs-4"></div>
+        <div class="col-xs-4">
+        <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
+        <a href="#"><i class="fa fa-facebook fa-2x"></i></a>
+        <a href="#"><i class="fa fa-google fa-2x"></i></a>
+        </div>
+        <div class="col-xs-4">
+        <p>powered by</p>
+        <h1>UNESCO</h1>
+        </div>
+        </div>
+        </div>
+    <footer>
+    <div class="container">
+    <div class="row">
+    <div class="col-xs-4">
+    <h1>UNITE4HERITAGE</h1>
+    </div>
+    <div class="col-xs-4"></div>
+    <div class="col-xs-4">
+    <p><a>unite4heritage.org</a></p>
+    </div>
+    </div>
+    </div>
+    </footer>
 </body>
 
 </html>
