--- a/new.html
+++ b/new.html
@@ -26,7 +26,7 @@
         <nav class="nav-navbar-default">
             <div class="navbar-header">
 
-                <a class="navbar-brand" href="http://"><img src="https://image.jpg" alt="Cubic-Design"></a>
+                <a class="navbar-brand" href="http://"><img src="https://image.jpg" alt="unite4heritage"></a>
             </div>
             
 
